--- a/src/style.css
+++ b/src/style.css
@@ -101,3 +101,30 @@ transform: scale(1.02);
 #backspace{
   margin-left: 232px;
 }
+
+@media(max-width:561px){
+  .button{
+    width: 57px;
+    height: 40px;
+    
+  }
+  #backspace{
+    margin-left: 213px;
+  }
+
+  h1{
+    margin-top: 4rem;
+    font-size: 2rem;
+  }
+
+  .row input{
+    width:253px;
+  }
+
+  #mute {
+  
+  margin-left: 70%;
+  margin-top: 12%;
+  
+}
+}
